--- a/SDVirusChecker/app/src/main/res/layout/activity_main.xml
+++ b/SDVirusChecker/app/src/main/res/layout/activity_main.xml
@@ -14,8 +14,21 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:id="@+id/checkingText"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        android:layout_above="@+id/checkBtn"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/check_button"
+        android:id="@+id/checkBtn"
+        android:onClick="starCheck"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true" />
+
+
 </RelativeLayout>
 
 
